--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -101,7 +101,7 @@ operation::index[snippets='response-body,http-response,links']
 
 `GET` 요청을 사용하여 서비스의 모든 이벤트를 조회할 수 있다.
 
-operation::amenity[snippets='response-fields,curl-request,http-response,links']
+operation::hello[snippets='response-fields,curl-request,http-response,links']
 
 [[resources-events-create]]
 === 이벤트 생성
